# ComfyUI-MingNodes

./: README.md  __init__.py  baidu_translate.py  gray_channel.py  pyproject.toml  requirements.txt
nodes/: add_watermark.py  baidu_translate.py  brightness_contrast_saturation.py  color_balance.py  gray_channel.py  highlight_shadow_brightness.py  hsl_color.py  imitation_hue.py  light_shape.py  remove_watermark.py  upload_image_path.py
workflow/: 光源_lightSource.json  加水印_addWatermark.json  追色_imitationHue.json
