[project]
name = "ComfyUI_MingNodes"
description = "Nodes: imitation hue,IC-light light shape, watermark, brightness contrast saturation, highlight shadow brightness, gray channel, baidu translate"
version = "1.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/mingsky-ai/ComfyUI-MingNodes"

[tool.comfy]
PublisherId = "mingsky"
DisplayName = "ComfyUI-MingNodes"
Icon = ""
